# lips

./: .travis.yml  ChangeLog.md  LICENSE  README.md  build.sh  cabal.project  cabal.project.freeze  default.nix  lips.cabal  lips.nix  run.sh  shell.nix  stack.yaml
app/: Main.hs
nix/: load.sh  run.sh
src/: Lips.hs  Parser.hs
src/Lips/: Eval.hs  Parser.hs
src/Text/Megaparsec/: Parsers.hs
