name:           lips
version:        0.1.0.0
description:    Please see the README on GitHub at <https://github.com/githubuser/lips#readme>
homepage:       https://github.com/githubuser/lips#readme
bug-reports:    https://github.com/githubuser/lips/issues
author:         Author name here
maintainer:     example@example.com
copyright:      2018 Author name here
license:        BSD3
license-file:   LICENSE
build-type:     Simple
cabal-version:  >= 1.10
extra-source-files:
    ChangeLog.md
    README.md

source-repository head
  type: git
  location: https://github.com/githubuser/lips

library
  exposed-modules:
      Lib
  other-modules:
      Paths_lips
  hs-source-dirs:
      src
  build-depends:
      base >=4.7 && <5
  default-language: Haskell2010

executable lips-exe
  main-is: Main.hs
  other-modules:
      Paths_lips
  hs-source-dirs:
      app
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.7 && <5
    , lips
  default-language: Haskell2010

test-suite lips-test
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  other-modules:
      Paths_lips
  hs-source-dirs:
      test
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.7 && <5
    , lips
  default-language: Haskell2010
