name:           lips
version:        0.1.0.0
description:    Please see the README on GitHub at <https://github.com/appositum/lips#readme>
homepage:       https://github.com/appositum/lips#readme
bug-reports:    https://github.com/appositum/lips/issues
author:         Eddie
maintainer:     appositum@protonmail.com
copyright:      2018 Eddie
license:        BSD3
license-file:   LICENSE
build-type:     Simple
cabal-version:  >= 1.10
extra-source-files:
    ChangeLog.md
    README.md

source-repository head
  type: git
  location: https://github.com/appositum/lips

library
  exposed-modules:
      Parser
  other-modules:
      Paths_lips
  hs-source-dirs:
      src
  build-depends:
      base >=4.7 && <5
    , trifecta
  default-language: Haskell2010

executable lips-exe
  main-is: Main.hs
  other-modules:
      Paths_lips
  hs-source-dirs:
      app
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.7 && <5
    , lips
    , trifecta
  default-language: Haskell2010

test-suite lips-test
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  other-modules:
      Paths_lips
  hs-source-dirs:
      test
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.7 && <5
    , lips
  default-language: Haskell2010
